Fix overflow shadow in subject search list

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1197,6 +1197,7 @@ input[type=text]:focus:not(:invalid), input[type=number]:focus:not(:invalid){
     max-height: none;
     margin: 0;
     padding: 0;
+    overflow: visible;
   }
   .popup:not(.popup-small) .top-bar-popup{
     position: fixed;
